# mneme-open

./: BINARY-LICENSE.md  LICENSE  PROVENANCE.md  README.md
clients/cli/: README.md  pyproject.toml
clients/cli/src/mneme_cli/: main.py
clients/cli/tests/: test_cli.py
clients/go/: README.md  go.mod
clients/python/: README.md  pyproject.toml
clients/python/scripts/: gen_stubs.py
clients/python/src/mneme_client/: __init__.py  _json.py  aio.py  client.py  errors.py  http.py
clients/python/src/mneme_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clients/python/src/mneme_client/_generated/: mneme_v1_pb2.py  mneme_v1_pb2_grpc.py
clients/python/tests/: fake_http_server.py  fake_server.py  test_client_async.py  test_client_sync.py  test_http_client.py  test_integration.py  test_json.py
clients/typescript/: README.md  package.json  (+2 more)
contracts/: mneme.context.v1-draft.schema.json  mneme.entity_evolution.v1-draft.schema.json  mneme.event.v1-draft.schema.json  mneme.extraction.v1-draft.schema.json  mneme.forgetting_policy.v1-draft.schema.json  mneme.jsonrpc.v1-draft.schema.json  mneme.jsonrpc.v1.schema.json  mneme.mcp.v1.schema.json  mneme.memory.v1-draft.schema.json  mneme.memory.v1.schema.json  mneme.memory_frames.v1-draft.schema.json  mneme.memory_frames.v1.schema.json  mneme.policy.v2-draft.schema.json  mneme.rest.v1-draft.openapi.json  mneme.retention_policy.v1-draft.schema.json  mneme.v1.proto
docs/: api-examples-context.md  api-examples.md
examples/: README.md  python_quickstart.py
scripts/: publish_release.ps1  publish_release.sh
(+36 files in other folders)
