[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme-cli"
version = "0.1.0"
description = "Command-line client for the Mneme cognition runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mneme-client>=0.1.0"]

[project.scripts]
mneme = "mneme_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
